# libgnme

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  configure
cmake/: FindOpenBLAS.cmake  SetupArmadillo.cmake  SetupOpenMP.cmake
docs/: Doxyfile.in
include/libgnme/: eri_ao2mo.h  linalg.h  lowdin_pair.h  slater_uscf.h  wick.h  wick_orbitals.h  wick_rscf.h
include/libnome/: cat.h  linalg.h  lowdin_pair.h  utils.h
libgnme/: CMakeLists.txt  gnme.h
libgnme/slater/: CMakeLists.txt  slater_condon.h  slater_rscf.C  slater_rscf.h  slater_uscf.C  slater_uscf.h
libgnme/utils/: CMakeLists.txt  bitset.h  bitset_tools.C  bitset_tools.h  eri_ao2mo.C  eri_ao2mo.h  linalg.C  linalg.h  lowdin_pair.C  lowdin_pair.h  utils.h
libgnme/wick/: CMakeLists.txt  one_body.h  one_body_rscf.C  one_body_rscf.h  one_body_uscf.C  one_body_uscf.h  reference_state.h  two_body.h  two_body_rscf.C  two_body_rscf.h  two_body_uscf.C  two_body_uscf.h  wick.h  wick_1rdm.C  wick_base.h  wick_base_one_body.C  wick_base_overlap.C  wick_base_rdm.C  wick_base_two_body.C  wick_orbitals.C  wick_orbitals.h  wick_overlap.C  wick_rdm.C  wick_rscf.C  wick_rscf.h  wick_rscf_one_body.C  wick_rscf_overlap.C  wick_rscf_rdm.C  wick_rscf_two_body.C  wick_uscf.C  wick_uscf.h  wick_uscf_one_body.C  wick_uscf_overlap.C  wick_uscf_rdm.C  wick_uscf_two_body.C
src/: CMakeLists.txt  README  gnme.h  nome.h
src/slater/: slater_rscf.C  slater_uscf.C
src/utils/: .lowdin_pair.C.swp  eri_ao2mo.C  linalg.C  lowdin_pair.C  utils.C  utils.h
src/wick/: .noci_wick.h.swp  CMakeLists.txt  noci_kernels.C  noci_kernels.h  noci_wick.C  noci_wick.h  noci_wick_one_body.C  noci_wick_overlap.C  noci_wick_two_body.C  wick.C  wick.h  wick_1rdm.C  wick_one_body.C  wick_orbitals.C  wick_overlap.C  wick_rscf.C  wick_rscf_one_body.C  wick_rscf_overlap.C  wick_rscf_two_body.C  wick_two_body.C
test/: CMakeLists.txt  Makefile  casci_coupling.C  casci_rscf_coupling.C  casci_rscf_coupling_split.C  casci_uscf_coupling.C  testing.h  wick_one_body.C  wick_orbitals_test.C  wick_rscf_one_body_test.C  wick_rscf_two_body_test.C  wick_rscf_two_body_timing.C  wick_two_body.C  wick_two_body_timing.C  wick_uscf_one_body_test.C  wick_uscf_two_body_test.C
test/h2o_6-31g/: CX.txt  M.txt  X.txt  XC.txt  Y.txt  coeff.txt  enuc.txt  nelec.txt  nuclei.txt  oeis.txt  ovls.txt
test/h6_sto-3g_4_4/: 0001.energy  0001.ham  0002.energy  0002.ham  basis.txt  c1.txt  c2.txt  ham.txt  nelec.txt  nuclei.txt  oeis.txt  refH.txt  refOv.txt  v1.txt  v2.txt
test/h6_sto-3g_6_6/: c1.txt  enuc.txt  mol.xyz  nelec.txt  ovls.txt  v1.txt
